--- a/jhipster/src/main/webapp/app/entities/quan-ly-thong-so/list/quan-ly-thong-so.component.html
+++ b/jhipster/src/main/webapp/app/entities/quan-ly-thong-so/list/quan-ly-thong-so.component.html
@@ -64,7 +64,7 @@
                 data-cy="entityDetailsButton"
               >
                 <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline">View</span>
+                <!-- <span class="d-none d-md-inline">View</span> -->
               </button>
 
               <button
@@ -74,12 +74,12 @@
                 data-cy="entityEditButton"
               >
                 <fa-icon icon="pencil-alt"></fa-icon>
-                <span class="d-none d-md-inline">Edit</span>
+                <!-- <span class="d-none d-md-inline">Edit</span> -->
               </button>
 
               <button type="submit" (click)="delete(quanLyThongSo)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
                 <fa-icon icon="times"></fa-icon>
-                <span class="d-none d-md-inline">Delete</span>
+                <!-- <span class="d-none d-md-inline">Delete</span> -->
               </button>
             </div>
           </td>
