--- a/jhipster/src/main/webapp/app/entities/thiet-bi/delete/thiet-bi-delete-dialog.component.html
+++ b/jhipster/src/main/webapp/app/entities/thiet-bi/delete/thiet-bi-delete-dialog.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="thietBi" name="deleteForm" (ngSubmit)="confirmDelete(thietBi.id!)">
   <div class="modal-header">
-    <h4 class="modal-title" data-cy="thietBiDeleteDialogHeading">Confirm delete operation</h4>
+    <h4 class="modal-title" data-cy="thietBiDeleteDialogHeading">Xác nhận xóa</h4>
 
     <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true" (click)="cancel()">&times;</button>
   </div>
@@ -8,16 +8,16 @@
   <div class="modal-body">
     <jhi-alert-error></jhi-alert-error>
 
-    <p id="jhi-delete-thietBi-heading">Are you sure you want to delete this Thiet Bi?</p>
+    <p id="jhi-delete-thietBi-heading">Bạn có muốn xóa?</p>
   </div>
 
   <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="cancel()">
-      <fa-icon icon="ban"></fa-icon>&nbsp;<span>Cancel</span>
+      <fa-icon icon="ban"></fa-icon>&nbsp;<span>Hủy</span>
     </button>
 
     <button id="jhi-confirm-delete-thietBi" data-cy="entityConfirmDeleteButton" type="submit" class="btn btn-danger">
-      <fa-icon icon="times"></fa-icon>&nbsp;<span>Delete</span>
+      <fa-icon icon="times"></fa-icon>&nbsp;<span>Xóa</span>
     </button>
   </div>
 </form>
