--- a/jhipster/src/main/webapp/app/entities/thiet-bi/list/thiet-bi.component.css
+++ b/jhipster/src/main/webapp/app/entities/thiet-bi/list/thiet-bi.component.css
@@ -1,3 +1,61 @@
 *{
-  font-family: sans-serif;
+  font-family: system-ui;
 }
+
+.create-thiet-bi {
+  border: none !important;
+  color: #fff;
+  background-color: #0D6EFD;
+}
+
+.btn-primary {
+  border: none !important;
+  color: #fff;
+  background-color: #0D6EFD;
+}
+
+.btn-info {
+  color: #fff;
+}
+
+/* .btn-danger {
+  background-color: transparent;
+  position: relative;
+  border: none;
+}
+
+.btn-danger::after {
+  content: 'delete';
+    position: absolute;
+    top: -130%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: fit-content;
+    height: fit-content;
+    background-color: rgb(168, 7, 7);
+    padding: 4px 8px;
+    border-radius: 5px;
+    transition: .2s linear;
+    transition-delay: .2s;
+    color: white;
+    text-transform: uppercase;
+    font-size: 12px;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.delete-icon {
+  transform: scale(1.2);
+  transition: .2s linear;
+}
+
+.btn-danger:hover > .delete-icon{
+  transform: scale(1.5);
+  fill: rgb(168, 7, 7);
+}
+
+.btn-danger:hover::after {
+  visibility: visible;
+  opacity: 1;
+  top: -160%;
+} */
