--- a/jhipster/src/main/webapp/app/entities/thiet-bi/update/thiet-bi-update.component.html
+++ b/jhipster/src/main/webapp/app/entities/thiet-bi/update/thiet-bi-update.component.html
@@ -1,12 +1,12 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-thiet-bi-heading" data-cy="ThietBiCreateUpdateHeading">Thêm mới</h2>
-      <button id="jh-create-entity" data-cy="entityCreateButton" class="btn btn-primary jh-create-entity create-thong-so-may"
+      <h2 id="jhi-thiet-bi-heading" data-cy="ThietBiCreateUpdateHeading">Thêm mới thiết bị</h2>
+      <!-- <button id="jh-create-entity" data-cy="entityCreateButton" class="btn btn-primary jh-create-entity create-thong-so-may"
         [routerLink]="['/thong-so-may/new']">
         <fa-icon icon="plus"></fa-icon>
         <span> Thêm mới thông số máy</span>
-      </button>
+      </button> -->
 
       
       <div>
@@ -27,32 +27,70 @@
           </thead>
 
           <tbody>
-            <tr *ngFor="let thietBiUpdate of thietBisSharedCollection; trackBy: trackId" data-cy="entityTable">
-              <td>{{ thietBiUpdate.maThietBi }}
+            <tr  data-cy="entityTable">
+              <td>
                 <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
                   formControlName="loaiThietBi" />
               </td>
-              <td>{{ thietBiUpdate.loaiThietBi }}
+              <td>
                 <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
                   formControlName="loaiThietBi" />
               </td>
-              <td>{{ thietBiUpdate.dayChuyen }}
+              <td>
                 <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
                   formControlName="loaiThietBi" />
               </td>
-              <td>{{ thietBiUpdate.ngayTao }}
+              <td>
                 <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
                   formControlName="loaiThietBi" />
               </td>
-              <td>{{ thietBiUpdate.timeUpdate }}
+              <td>
                 <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
                   formControlName="loaiThietBi" />
               </td>
-              <td>{{ thietBiUpdate.updateBy }}
+              <td>
                 <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
                   formControlName="loaiThietBi" />
               </td>
-              <td>{{ thietBiUpdate.status }}
+              <td>
+                <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
+                  formControlName="loaiThietBi" />
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+      <h2 id="jhi-thiet-bi-heading" data-cy="ThietBiCreateUpdateHeading">Thêm mới thông số</h2>
+        <button id="jh-create-entity" class="btn btn-primary jh-create-entity create-thong-so-may">
+          <fa-icon icon="plus"></fa-icon>
+          <span> Thêm mới thông số</span>
+        </button>
+        <table class="table table-striped" aria-describedby="page-heading">
+          <thead>
+            <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending">
+              <th scope="col" jhiSortBy="maThietBi"><span>Thông số</span></th>
+              <th scope="col" jhiSortBy="loaiThietBi"><span>Mô tả</span></th>
+              <th scope="col" jhiSortBy="updateBy"><span>Phân loại</span> </th>
+              <th scope="col" jhiSortBy="trangThai"><span>Trạng thái</span></th>
+              <th scope="col"></th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr  data-cy="entityTable">
+              <td>
+                <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
+                  formControlName="loaiThietBi" />
+              </td>
+              <td>
+                <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
+                  formControlName="loaiThietBi" />
+              </td>
+              <td>
+                <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
+                  formControlName="loaiThietBi" />
+              </td>
+              <td>
                 <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
                   formControlName="loaiThietBi" />
               </td>
