--- a/jhipster/src/main/webapp/app/entities/thong-so-may/update/thong-so-may-update.component.html
+++ b/jhipster/src/main/webapp/app/entities/thong-so-may/update/thong-so-may-update.component.html
@@ -2,30 +2,41 @@
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm" style="width: 125%;">
 
-      <h2 id="jhi-thong-so-may-heading" data-cy="ThongSoMayCreateUpdateHeading">Chỉnh sửa thông số máy</h2>
-      <header class="header-tsm">
-        <div>
-          <label class="form-label" for="field_maThietBi"><p>Mã thiết bị</p></label>
-          <select class="form-control" id="field_maThietBi" data-cy="maThietBi" name="maThietBi" formControlName="maThietBi" >
-            <option [ngValue]="null"></option>
-            <option [ngValue]="maThietBiOption.id === editForm.get('thietBi')!.value?.id ?editForm.get('thietBi')!.value : maThietBiOption "
-            *ngFor="let maThietBiOption of thietBisSharedCollection; trackBy: trackThietBiById"
-            >{{maThietBiOption.maThietBi}}</option>
-          </select>
-        </div>
-        
-        <label for="">
-          <p>Loại thiết bị</p>
-        </label>
-        <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
-          formControlName="loaiThietBi" />
-  
-        <label for="">
-          <p>Dây chuyền</p>
-        </label>
-        <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
-          formControlName="loaiThietBi" />
-      </header>
+      <h2 id="jhi-thong-so-may-heading" data-cy="ThongSoMayCreateUpdateHeading">Thêm mới thông số máy</h2>
+      
+      <form [formGroup]="form">
+        <header class="header-tsm">
+          <div>
+            <label class="form-label" for="field_maThietBi"><p>Mã thiết bị</p></label>
+            <select class="form-control" id="field_maThietBi" data-cy="maThietBi" name="maThietBi" formControlName="maThietBi" >
+              <option [ngValue]="null"></option>
+              <option [ngValue]="maThietBiOption.id === editForm.get('maThietBi')!.value?.id ?editForm.get('maThietBi')!.value : maThietBiOption "
+              *ngFor="let maThietBiOption of thietBisSharedCollection; trackBy: trackThietBiById"
+              >{{maThietBiOption.maThietBi}}</option>
+            </select>
+          </div>
+          
+          <div>
+            <label class="form-label" for="field_maThietBi"><p>Loại thiết bị</p></label>
+            <select class="form-control" id="field_maThietBi" data-cy="maThietBi" name="maThietBi" formControlName="maThietBi" >
+              <option [ngValue]="null"></option>
+              <option [ngValue]="maThietBiOption.id === editForm.get('maThietBi')!.value?.id ?editForm.get('maThietBi')!.value : maThietBiOption "
+              *ngFor="let maThietBiOption of thietBisSharedCollection; trackBy: trackThietBiById"
+              >{{maThietBiOption.maThietBi}}</option>
+            </select>
+          </div>
+    
+          <div>
+            <label class="form-label" for="field_maThietBi"><p>Dây chuyền</p></label>
+            <select class="form-control" id="field_maThietBi" data-cy="maThietBi" name="maThietBi" formControlName="maThietBi" >
+              <option [ngValue]="null"></option>
+              <option [ngValue]="maThietBiOption.id === editForm.get('maThietBi')!.value?.id ?editForm.get('maThietBi')!.value : maThietBiOption "
+              *ngFor="let maThietBiOption of thietBisSharedCollection; trackBy: trackThietBiById"
+              >{{maThietBiOption.dayChuyen}}</option>
+            </select>
+          </div>
+        </header>
+      </form>
 
       <div>
         <jhi-alert-error></jhi-alert-error>
@@ -34,8 +45,8 @@
           <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" (sortChange)="loadPage()">
               <th scope="col" jhiSortBy="id"><span>STT</span></th>
-              <th scope="col" jhiSortBy="thongSo"><span>Ngày tạo</span></th>
-              <th scope="col" jhiSortBy="thongSo"><span>Ngày cập nhật</span></th>
+              <!-- <th scope="col" jhiSortBy="thongSo"><span>Ngày tạo</span></th>
+              <th scope="col" jhiSortBy="thongSo"><span>Ngày cập nhật</span></th> -->
               <th scope="col" jhiSortBy="thongSo"><span>Thông số</span></th>
               <th scope="col" jhiSortBy="thongSo"><span>Mô tả</span></th>
               <th scope="col" jhiSortBy="trangThai"><span>Trạng thái</span></th>
@@ -50,34 +61,7 @@
               <td>
                 <a [routerLink]="['/thong-so-may', thongSoMay.id, 'view']">{{ thongSoMay.id }}</a>
               </td>
-              <!-- <td>{{ thongSoMay.maThietBi }}
-                <input type="text" class="form-control" name="maThietBi" id="field_maThietBi" data-cy="maThietBi"
-                  formControlName="maThietBi" />
 
-              </td> -->
-              <!-- <td>{{ thongSoMay.loaiThietBi }}
-                <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
-                  formControlName="loaiThietBi" />
-
-              </td>
-              <td>{{ thongSoMay.thongSo }}
-                <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
-                  formControlName="loaiThietBi" />
-
-              </td>
-              <td>{{ thongSoMay.moTa }}
-                <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
-                  formControlName="loaiThietBi" />
-              </td> -->
-
-              <td>{{ thongSoMay.trangThai }}
-                <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
-                  formControlName="loaiThietBi" />
-              </td>
-              <td>{{ thongSoMay.trangThai }}
-                <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
-                  formControlName="loaiThietBi" />
-              </td>
               <td>{{ thongSoMay.trangThai }}
                 <input type="text" class="form-control" name="loaiThietBi" id="field_loaiThietBi" data-cy="loaiThietBi"
                   formControlName="loaiThietBi" />
